--- a/src/br/com/infox/telas/TelaOs.form
+++ b/src/br/com/infox/telas/TelaOs.form
@@ -344,6 +344,7 @@
       <SubComponents>
         <Component class="javax.swing.JTextField" name="txtCliPesquisar">
           <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtCliPesquisarActionPerformed"/>
             <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtCliPesquisarKeyReleased"/>
           </Events>
         </Component>
